Bug 164127 - [Crash] Crash on returning to dialog window after switching to document while editing Basic-IDE dialog controls
Summary: [Crash] Crash on returning to dialog window after switching to document while...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: high major
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 target:24.8.5 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2024-12-02 12:25 UTC by nobu
Modified: 2025-01-31 02:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample png (274.94 KB, image/png)
2024-12-02 12:27 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-12-02 12:25:47 UTC
Description:
[Crash][Basic-IDE]
Crash on returning to dialog window after switching to document while editing Basic-IDE dialog controls.

Steps to Reproduce:
1. Open new Writer.
2. Open Basic-IDE and create a dialog form.
3. Activate the form by clicking on the ridge line of the dialog form and open the "General-Tab" in the "Object Catalog".
   Figure Click-1
4. Click on the Name input box.
   Figure Click-2
5. Click on the Writer document window to activate it.
   Figure Click-3
6. Click on the Basic-IDE window to make it active again.
   Figure Click-4

Actual Results:
7. The window crashes immediately after clicking.

Expected Results:
7.The dialog is editable.


Reproducible: Always


User Profile Reset: No

Additional Info:

Not Reproduced with
Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Reproducible with
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 2; OS: Linux 6.8; UI render: default; VCL: qt5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Ubuntu package version: 4:24.2.3-0ubuntu0.24.04.2
Calc: threaded

Reproducible with
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: afc441e65107ed808c399b65f4737d25541cdf77
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2024-12-02 12:27:00 UTC
Created attachment 197897 [details]
sample png
Comment 2 nobu 2024-12-06 10:42:34 UTC
Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f232952e727c50cc3a5927ff3b082f88e36c9bed
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: default
Comment 3 nobu 2024-12-07 09:13:49 UTC
Reproducible with

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 4 nobu 2024-12-13 10:19:15 UTC
Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a5149eadb23825a9fb5beeda81836ad7940c3083
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: default
Comment 5 nobu 2024-12-20 07:03:49 UTC
Reproducible with

Version: 25.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 468d47bdf44a772e989a0adbeb5bb097e3cb4f31
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 6 BogdanB 2024-12-22 06:57:09 UTC
Marked as New, based on comments 2 - comments 5.
Comment 7 nobu 2024-12-22 10:20:05 UTC
You do not need to create a dialog to reproduce this problem.
It also happens with non-editable dialogs like "ScriptForge".

Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 141f3fd15633803afa720837405a0bacbc2726cb
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 8 nobu 2025-01-11 06:22:54 UTC
Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9ae567c791bcffdc3fff9e3fb11b46275a13d2b
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 9 raal 2025-01-11 09:37:22 UTC
Reproducible with vclplugin=gen, but not with GTK3

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 540d6349ac675e98c73166392cabbfcca8a6fc5b
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 10 raal 2025-01-11 11:03:50 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2.
Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
Thanks
 430d3a15a949b4e94e626d2a964afc1b0671527d is the first bad commit
commit 430d3a15a949b4e94e626d2a964afc1b0671527d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Sep 19 11:29:36 2023 +0200

    source b2b43e83ccc41c37bad32a4dcf07ca86bf2f8a15

156679: a11y: Call base class impl at beginning of Edit::GetFocus | https://gerrit.libreoffice.org/c/core/+/156679
Comment 11 Michael Weghorn 2025-01-13 10:31:32 UTC
(In reply to raal from comment #10)
> This seems to have begun at the below commit in bibisect repository/OS
> linux-64-24.2.
> Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
> Thanks
>  430d3a15a949b4e94e626d2a964afc1b0671527d is the first bad commit
> commit 430d3a15a949b4e94e626d2a964afc1b0671527d
> Author: Jenkins Build User <tdf@pollux.tdf>
> Date:   Tue Sep 19 11:29:36 2023 +0200
> 
>     source b2b43e83ccc41c37bad32a4dcf07ca86bf2f8a15
> 
> 156679: a11y: Call base class impl at beginning of Edit::GetFocus |
> https://gerrit.libreoffice.org/c/core/+/156679

Apparently, the property browser disposes the edit when it retrieves focus, which is a little odd.

Pending change https://gerrit.libreoffice.org/c/core/+/180168 fixes the crash and effectively restores the behavior from before the above-mentioned commit for the scenario described here (s. commit message for more details).

What can still be observed then is that the cursor shortly appears in the previously focused "Name" edit/input box, then disappears (i.e. focus is not properly restored), but that's the same before the above-mentioned 

    commit b2b43e83ccc41c37bad32a4dcf07ca86bf2f8a15
    Author: Michael Weghorn
    Date:   Thu Sep 7 15:42:57 2023 +0200

        a11y: Call base class impl at beginning of Edit::GetFocus

and should be handled in a separate bug report if considered relevant.
Comment 12 Commit Notification 2025-01-13 17:37:16 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9778cd8b09b03757b0462bd6780cf7500000072f

tdf#164127 vcl: Skip further focus processing for disposed Edit

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Weghorn 2025-01-13 17:37:46 UTC
Fixed in master, backports for 25-2 and 24-8 pending in Gerrit.
Comment 14 nobu 2025-01-14 05:32:33 UTC
This bug is not seen in the following versions:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 590157ac1584fb829b0c61905298114e7c4adfde
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 15 Michael Weghorn 2025-01-14 05:36:42 UTC
(In reply to nobu from comment #14)
> This bug is not seen in the following versions:
> 
> Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 590157ac1584fb829b0c61905298114e7c4adfde
> CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan;
> VCL: win
> Locale: en-US (ja_JP); UI: en-US
> Calc: CL threaded

Thanks for testing. -> Setting to Verified
Comment 16 Commit Notification 2025-01-16 19:34:02 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/3ebb0c68c969241dd93cf833f56763eef6ae4acd

tdf#164127 vcl: Skip further focus processing for disposed Edit

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2025-01-16 19:58:10 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4adc323bd761da3595212f9307240e9c52169d19

tdf#164127 vcl: Skip further focus processing for disposed Edit

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 nobu 2025-01-18 08:34:00 UTC
This bug is not seen in the following versions:

Version: 25.2.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 4adc323bd761da3595212f9307240e9c52169d19
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 19 nobu 2025-01-22 07:49:42 UTC
This bug is not seen in the following versions:

Version: 24.8.5.0.0+ (X86_64) / LibreOffice Community
Build ID: d069b60587c73203749fe1333f87c529def1574d
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: threaded
Comment 20 nobu 2025-01-31 02:24:55 UTC
A strange thing happens.
This bug is not seen in the following versions:

Version: 25.2.0.3 (X86_64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded